crates/pg_syntax/tests/snapshots/postgres_regress/horology@178.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT d1 AS european_postgres FROM TIMESTAMP_TBL;
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    ColumnRef@7..9
      Ident@7..9 "d1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..30 "european_postgres"
  Whitespace@30..31 " "
  From@31..35 "FROM"
  Whitespace@35..36 " "
  RangeVar@36..49
    Ident@36..49 "TIMESTAMP_TBL"
  Ascii59@49..50 ";"

