crates/pg_syntax/tests/snapshots/postgres_regress/horology@182.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SET DateStyle TO 'European,SQL';"
---
VariableSetStmt@0..32
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..13 "DateStyle"
  Whitespace@13..14 " "
  To@14..16 "TO"
  Whitespace@16..17 " "
  AConst@17..31
    Sconst@17..31 "'European,SQL'"
  Ascii59@31..32 ";"

