crates/pg_syntax/tests/snapshots/postgres_regress/horology@187.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('97/2/16 8:14:30', 'FMYYYY/FMMM/FMDD FMHH:FMMI:FMSS');"
---
SelectStmt@0..74
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..72
    FuncCall@7..72
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..37
        Sconst@20..37 "'97/2/16 8:14:30'"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..72
        Sconst@39..72 "'FMYYYY/FMMM/FMDD FMH ..."
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

