crates/pg_syntax/tests/snapshots/postgres_regress/horology@191.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('1985 \\ 12', 'YYYY \\\\ DD');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..31
        Sconst@20..31 "'1985 \\ 12'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..45
        Sconst@33..45 "'YYYY \\\\ DD'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

