crates/pg_syntax/tests/snapshots/postgres_regress/horology@192.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('My birthday-> Year: 1976, Month: May, Day: 16',\n                    '\"My birthday-> Year:\" YYYY, \"Month:\" FMMonth, \"Day:\" DD');"
---
SelectStmt@0..148
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..146
    FuncCall@7..146
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..67
        Sconst@20..67 "'My birthday-> Year:  ..."
      Ascii44@67..68 ","
      Newline@68..69 "\n"
      Whitespace@69..89 "                    "
      AConst@89..146
        Sconst@89..146 "'\"My birthday-> Year: ..."
  Ascii41@146..147 ")"
  Ascii59@147..148 ";"

